--- a/index.html
+++ b/index.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Print Store</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3D Print Order Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Welcome to Our 3D Print Store</h1>
 
-  <!-- Product List -->
-  <div id="products">
-    <h2>Available Products</h2>
-    <div class="product">
-      <p>Product 1</p>
-      <p id="product1-stock">In stock: 10</p>
-      <input type="number" id="product1-quantity" min="1" max="10" value="1">
+    <header>
+        <h1>3D Print Order Page</h1>
+        <p>Click on a product for more details and to add it to your cart!</p>
+    </header>
+
+    <!-- Product Grid -->
+    <div class="product-grid">
+        <!-- Product 1 -->
+        <div class="product" data-id="1">
+            <img src="product1.jpg" alt="Product 1">
+            <h3>Product 1</h3>
+            <p>$20.00</p>
+        </div>
+        <!-- Product 2 -->
+        <div class="product" data-id="2">
+            <img src="product2.jpg" alt="Product 2">
+            <h3>Product 2</h3>
+            <p>$15.00</p>
+        </div>
+        <!-- Add more products here -->
     </div>
-    <div class="product">
-      <p>Product 2</p>
-      <p id="product2-stock">In stock: 5</p>
-      <input type="number" id="product2-quantity" min="1" max="5" value="1">
+
+    <!-- Product Modal -->
+    <div class="modal" id="productModal">
+        <div class="modal-content">
+            <span class="close-button" id="closeModal">&times;</span>
+            <h2 id="productTitle"></h2>
+            <img id="productImage" src="" alt="" class="modal-image">
+            <p id="productDescription"></p>
+            <p><strong>Price:</strong> $<span id="productPrice"></span></p>
+            <label for="quantity">Quantity:</label>
+            <input type="number" id="quantity" min="1" value="1">
+            <button id="addToCartButton">Add to Cart</button>
+        </div>
     </div>
-  </div>
 
-  <!-- Order Form -->
-  <h2>Order Now</h2>
-  <form id="orderForm">
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" required>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 3D Print Order Page | All rights reserved</p>
+    </footer>
 
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" required>
-
-    <button type="submit">Place Order</button>
-  </form>
-
-  <div id="orderDetails"></div>
-
-  <script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
