--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@
     <header>
         <h1>3D Print Order Page</h1>
         <p>Click on a product for more details and to add it to your cart!</p>
+        <!-- View Cart Button -->
+        <button id="viewCartButton">View Cart</button>
     </header>
 
     <!-- Product Grid -->
     <div class="product-grid">
-        <!-- Product 1 -->
         <div class="product" data-id="1">
             <img src="product1.jpg" alt="Product 1">
             <h3>Product 1</h3>
             <p>$20.00</p>
         </div>
-        <!-- Product 2 -->
         <div class="product" data-id="2">
             <img src="product2.jpg" alt="Product 2">
             <h3>Product 2</h3>
             <p>$15.00</p>
         </div>
-        <!-- Add more products here -->
     </div>
 
     <!-- Product Modal -->
@@ -41,6 +40,17 @@
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" min="1" value="1">
             <button id="addToCartButton">Add to Cart</button>
+        </div>
+    </div>
+
+    <!-- Cart Modal -->
+    <div class="modal" id="cartModal">
+        <div class="modal-content">
+            <span class="close-button" id="closeCartModal">&times;</span>
+            <h2>Your Cart</h2>
+            <div id="cartItems"></div>
+            <p><strong>Total Price:</strong> $<span id="totalPrice">0.00</span></p>
+            <button id="checkoutButton">Checkout</button>
         </div>
     </div>
 
